--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -20,3 +20,5 @@ Imports:
 Config/testthat/edition: 3
 Depends: 
     R (>= 2.10)
+URL: https://github.com/EBOD13/MATH4753DANES2024
+BugReports: https://github.com/EBOD13/MATH4753DANES2024/issues
